--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 				<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-info">お知らせ</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
 				<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-info">お知らせ</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
 				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info">お知らせ</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
-				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info2">お知らせ</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info">お知らせ</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
 				<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-info">お知らせ</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 			</ul>
 			<ul id="news3" class="news-list">
@@ -257,8 +257,15 @@
 			<div class="service">
 				<h2>SERVICE</h2>
 				<h3>事業紹介</h3>
-				<p class="intro">アドプラットフォーム事業・ポイントメディア事業<br>そしてインキュベーション事業を主軸に展開</p>
-				<p>インターネット領域においての<br>アドプラットフォーム事業・ポイントメディア事業の他にも、<br>HR関連事業やFintech関連事業などの新規事業への挑戦も続けています。</p>
+				<div class="intro">
+					<p>アドプラットフォーム事業・ポイントメディア事業</p>
+					<p>そしてインキュベーション事業を主軸に展開</p>
+				</div>
+				<div class="whats">
+					<p>インターネット領域においての</p>
+					<p>アドプラットフォーム事業・ポイントメディア事業の他にも、</p>
+					<p>HR関連事業やFintech関連事業などの新規事業への挑戦も続けています。</p>
+				</div>
 				<div class="btn"><a href="">詳細を見る</a></div>
 			</div>
 		</section>
@@ -280,8 +287,15 @@
 			<div class="recruit">
 				<h2>RECRUIT</h2>
 				<h3>採用情報</h3>
-				<p class="intro">2100年を想像し、2020年を創造する<br>100年後の変化に対応する柔軟でしなやかな組織を創っていく</p>
-				<p>これからの100年、世界は今まで以上に大きな変化が起こっていくと考えます。<br>だからこそ、多様な事業、多様な思想で会社経営していくことが必要です。<br>その礎を一緒に築いていける人材を求めています。</p>
+				<div class="intro">
+					<p>2100年を想像し、2020年を創造する</p>
+					<p>100年後の変化に対応する柔軟でしなやかな組織を創っていく</p>
+				</div>
+				<div class="whats">
+					<p>これからの100年、世界は今まで以上に大きな変化が起こっていくと考えます。</p>
+					<p>だからこそ、多様な事業、多様な思想で会社経営していくことが必要です。
+						<p>その礎を一緒に築いていける人材を求めています。</p>
+				</div>
 				<div class="btn"><a href="">詳細を見る</a></div>
 				<div>
 		</section>
