--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
 <body>
 	<header class="top-header">
+		<ul class="lang-nav">
+			<li>日本語</li>
+			<li><a href="#">English</a></li>
+		</ul>
 		<a href="#"><h1 class="header-img">VOYAGE GROUP</h1></a>
 
 		<div class="small-menu">
@@ -33,7 +37,7 @@
 				<li><a href="">株主・投資家の皆様へ</a></li>
 				<li><a href="">採用情報</a></li>
 			</ul>
-			<ul class="lang-nav">
+			<ul class="small-lang-nav">
 				<li>日本語</li>
 				<li><a href="#">English</a></li>
 			</ul>
