--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
 				<span></span>
 				<span></span>
 			</a>
-			<ul>
-				<li><a href="">企業情報</a></li>
-				<li><a href="">ニュース</a></li>
-				<li><a href="">事業紹介</a></li>
-				<li><a href="">テクノロジー</a></li>
-				<li><a href="">カルチャー</a></li>
-				<li><a href="">株主・投資家の皆様へ</a></li>
-				<li><a href="">採用情報</a></li>
-			</ul>
-			<ul class="small-lang-nav">
-				<li>日本語</li>
-				<li><a href="#">English</a></li>
-			</ul>
+			<div>
+				<ul>
+					<li><a href="">企業情報</a></li>
+					<li><a href="">ニュース</a></li>
+					<li><a href="">事業紹介</a></li>
+					<li><a href="">テクノロジー</a></li>
+					<li><a href="">カルチャー</a></li>
+					<li><a href="">株主・投資家の皆様へ</a></li>
+					<li><a href="">採用情報</a></li>
+				</ul>
+				<ul class="small-lang-nav">
+					<li>日本語</li>
+					<li><a href="#">English</a></li>
+				</ul>
+			</div>
 		</div>
 
 		<nav class="global-nav">
@@ -203,9 +205,9 @@
 			</ul>
 		</nav>
 		<ul class="slider">
-			<li><img src="image/img_slider_01.jpg" alt=""></li>
-			<li><img src="image/img_slider_02.jpg" alt=""></li>
-			<li><img src="image/img_slider_03.jpg" alt=""></li>
+			<li class="item"><a href=""><img src="image/img_slider_01.jpg" alt=""></a></li>
+			<li class="item"><a href=""><img src="image/img_slider_02.jpg" alt=""></a></li>
+			<li class="item"><a href=""><img src="image/img_slider_03.jpg" alt=""></a></li>
 		</ul>
 	</header>
 
@@ -217,11 +219,11 @@
 			<input id="news4-tab" class="tab-control" type="radio" name="tab-check">
 			<input id="news5-tab" class="tab-control" type="radio" name="tab-check">
 			<ul class="news-nav">
-				<li><label class="panels" for="news1-tab">ALL</label> </li>
-				<li><label class="panels" for="news2-tab">IRニュース</label></li>
-				<li><label class="panels" for="news3-tab">プレスリリース</label></li>
-				<li><label class="panels" for="news4-tab">パブリシティ</label></li>
-				<li><label class="panels" for="news5-tab">勉強会/登壇情報</label></li>
+				<li class=" panel1"><label class="panels" for="news1-tab">ALL</label> </li>
+				<li class=" panel2"><label class="panels" for="news2-tab">IRニュース</label></li>
+				<li class=" panel3"><label class="panels" for="news3-tab">プレスリリース</label></li>
+				<li class=" panel4"><label class="panels" for="news4-tab">パブリシティ</label></li>
+				<li class=" panel5"><label class="panels" for="news5-tab">勉強会/登壇情報</label></li>
 			</ul>
 			<ul id="news1" class="news-list">
 				<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-release">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
