--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	</header>
 
 	<main>
-		<section class="news">
+		<div class="news">
 			<input id="news1-tab" class="tab-control" type="radio" name="tab-check" checked="checked">
 			<input id="news2-tab" class="tab-control" type="radio" name="tab-check">
 			<input id="news3-tab" class="tab-control" type="radio" name="tab-check">
@@ -260,7 +260,7 @@
 				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
 				<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 			</ul>
-		</section>
+		</div>
 
 		<section class="about-company">
 			<div>
@@ -319,7 +319,7 @@
 						<p>その礎を一緒に築いていける人材を求めています。</p>
 				</div>
 				<div class="btn"><a href="">詳細を見る</a></div>
-				<div>
+			</div>
 		</section>
 	</main>
 
